--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -272,7 +272,7 @@
         <div class="col-md-3 advantages-item wp7">
           <a href="http://www.bmius.org" target="_blank">
             <div class="advantages-item-icon"><i class="fa fa-external-link"></i></div>
-            <h3 title="<%= t(:links_bmi_title) %>">Bible Ministries International</h3>
+            <h3 title="<%= t(:links_bmi_title) %>">Bible Ministries International <%= english_note %></h3>
           </a>
           <p>
             <%= t(:links_bmi_desc) %>
@@ -283,7 +283,7 @@
         <div class="col-md-3 advantages-item wp7 delay-05s">
           <a href="<%= t(:links_fns_href) %>" target="_blank">
             <div class="advantages-item-icon"><i class="fa fa-external-link"></i></div>
-            <h3 title="<%= t(:links_fns_title) %>">Friday Night Study</h3>
+            <h3 title="<%= t(:links_fns_title) %>">Friday Night Study <%= english_note %></h3>
           </a>
           <p>
             <%= t(:links_fns_desc) %>
