--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -250,7 +250,7 @@
         <div class="col-md-3 advantages-item wp7 delay-05s">
           <a href="<%= t(:links_ebible_href) %>" target="_blank">
             <div class="advantages-item-icon"><i class="fa fa-external-link"></i></div>
-            <h3 title="<%= t(:links_ebible_title) %>">E Bible Fellowship</h3>
+            <h3 dir="ltr" title="<%= t(:links_ebible_title) %>">E Bible Fellowship</h3>
           </a>
           <p>
             <%= t(:links_ebible_desc) %>
@@ -261,10 +261,10 @@
         <div class="col-md-3 advantages-item wp7">
           <a href="<%= t(:links_ebible2_href) %>" target="_blank">
             <div class="advantages-item-icon"><i class="fa fa-external-link"></i></div>
-            <h3 title="<%= t(:links_ebible2_title) %>">E Bible2</h3>
+            <h3 dir="ltr" title="<%= t(:links_ebible2_title) %>">E Bible2</h3>
           </a>
           <p><%= t(:links_ebww_tagline) %></p>
-          <a href="<%= t(:links_ebww_href) %>" target="_blank"><h3>EBWW.net</h3></a>
+          <a href="<%= t(:links_ebww_href) %>" target="_blank"><h3 dir="ltr">EBWW.net</h3></a>
           <p><%= t(:links_ebww_desc) %></p>
         </div>
         <!-- /.col-md-4 -->        
@@ -272,7 +272,7 @@
         <div class="col-md-3 advantages-item wp7">
           <a href="http://www.bmius.org" target="_blank">
             <div class="advantages-item-icon"><i class="fa fa-external-link"></i></div>
-            <h3 title="<%= t(:links_bmi_title) %>">Bible Ministries International <%= english_note %></h3>
+            <h3 dir="ltr" title="<%= t(:links_bmi_title) %>">Bible Ministries International <%= english_note %></h3>
           </a>
           <p>
             <%= t(:links_bmi_desc) %>
@@ -283,7 +283,7 @@
         <div class="col-md-3 advantages-item wp7 delay-05s">
           <a href="<%= t(:links_fns_href) %>" target="_blank">
             <div class="advantages-item-icon"><i class="fa fa-external-link"></i></div>
-            <h3 title="<%= t(:links_fns_title) %>">Friday Night Study <%= english_note %></h3>
+            <h3 dir="ltr" title="<%= t(:links_fns_title) %>">Friday Night Study <%= english_note %></h3>
           </a>
           <p>
             <%= t(:links_fns_desc) %>
@@ -335,11 +335,11 @@
         <div align="center">
           <div class="col-lg-12 wp11">
             <ul class="social-buttons">
-              <li><a href="https://twitter.com/ebiblefellowshp"><i class="fa fa-twitter fa-fw"></i> <span>Twitter</span></a></li>
-              <li><a href="https://www.facebook.com/ebiblefellowship"><i class="fa fa-facebook fa-fw"></i> <span>EBible</span></a></li>
-              <li><a href="https://www.facebook.com/groups/willworldendOctober7th2015/"><i class="fa fa-facebook fa-fw"></i> <span>willworldendOctober7th2015</span></a></li>
-              <li><a href="https://www.youtube.com/EBibleFellowship1"><i class="fa fa-youtube fa-fw"></i> <span>YouTube</span></a></li>
-              <li><a href="https://vimeo.com/133226616"><i class="fa fa-vimeo-square fa-fw"></i> <span>Vimeo</span></a></li>
+              <li dir="ltr" style="width: 15%;"><a href="https://twitter.com/EndsOct72015"><i class="fa fa-twitter fa-fw"></i> <span>@EndsOct72015</span> <%= english_note %></a></li>
+              <li dir="ltr" style="width: 25%;"><a href="https://www.facebook.com/groups/willworldendOctober7th2015/"><i class="fa fa-facebook fa-fw"></i> <span>willworldendOctober7th2015</span> <%= english_note %></a></li>
+              <li dir="ltr" style="width: 18%;"><a href="https://www.youtube.com/channel/UC8uFk1Rroy8v8yWbyQPAV4w/feed"><i class="fa fa-youtube fa-fw"></i> <span>Friday Night Study</span> <%= english_note %></a></li>
+              <li dir="ltr" style="width: 18%;"><a href="https://www.youtube.com/EBibleFellowship1"><i class="fa fa-youtube fa-fw"></i> <span>E Bible Fellowship</span> <%= english_note %></a></li>
+              <li dir="ltr" style="width: 18%;"><a href="https://www.youtube.com/channel/UCTj0qmscuMgMhj3L3zLkY6g"><i class="fa fa-youtube fa-fw"></i> <span>Bible Ministries International</span> <%= english_note %></a></li>
             </ul>
             <img src="/img/logo.png" width="35%" height="35%" alt="">
           </div>
@@ -349,7 +349,7 @@
       <!-- /.row -->
 
       <div class="row">
-        <div class="copyright">
+        <div class="copyright" dir="ltr">
           © Oct7th.com 2015<br>
           <%= t(:contact_email_desc) %>: <a href="mailto:info@oct7th.com">info@oct7th.com</a>
         </div>
