Update index.html.erb fixing buttons width and various icons.
- Made Play, Pause and About buttons use auto width since the width
  varies so much from one language to another. The buttons will not
  be equal width but at least the padding will be consistent.
- Changed Play and About icons to fa-play-circle and fa-info-circle
  respectively both at large size.
- In the link in the About section first paragraph, added an icon
  for external link.

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2876,3 +2876,9 @@ position:absolute;
 
 /*  18 - Your CSS Code
 -----------------------------------------------------------*/
+/* Use default width so languages that are more verbose than English
+ * won't run out of room. */
+.media-btns .btn {
+  width: auto;
+}
+
