--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -180,9 +180,9 @@
           <!-- /.container -->
 
           <div class="media-btns buttons page-scroll">
-            <div class="btn btn-default play-btn" id="play-button"><%= t(:play_video) %><i class="fa fa-play animated"></i></div>
-            <div class="btn btn-default pause-btn" id="pause-button"><%= t(:stop_video) %><i class="fa fa-pause animated"></i></div>
-            <a class="btn btn-default about-btn" href="#about"><%= t(:view_about) %><i class="fa fa-chevron-right"></i></a>
+            <div class="btn btn-default play-btn" id="play-button"><%= t(:play_video) %><i class="fa fa-play-circle fa-lg animated"></i></div>
+            <div class="btn btn-default pause-btn" id="pause-button"><%= t(:stop_video) %><i class="fa fa-pause fa-lg animated"></i></div>
+            <a class="btn btn-default about-btn" href="#about"><%= t(:view_about) %><i class="fa fa-info-circle fa-lg"></i></a>
           </div>
 
         </div>
@@ -213,7 +213,7 @@
         <div class="col-lg-12 wp2 delay-05s">
           <p>
             <%= t(:about_p1) %>
-              <a href="<%= t(:about_p1_href) %>" target="_blank"><%= t(:about_p1_link) %></a>
+              <a href="<%= t(:about_p1_href) %>" target="_blank"><%= t(:about_p1_link) %>&nbsp;<i class="fa fa-external-link fa-lg"></i></a>
           </p>
           <p>
             <%= t(:about_p2) %>
