--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -213,7 +213,7 @@
         <div class="col-lg-12 wp2 delay-05s">
           <p>
             <%= t(:about_p1) %>
-              <a href="<%= t(:about_p1_href) %>" target="_blank"><%= t(:about_p1_link) %>&nbsp;<i class="fa fa-external-link fa-lg"></i></a>
+              <a href="<%= t(:about_p1_href) %>" target="_blank"><%= t(:about_p1_link) %>&nbsp;<i class="fa fa-external-link"></i></a>
           </p>
           <p>
             <%= t(:about_p2) %>
@@ -311,7 +311,7 @@
       <div class="col-lg-10 col-lg-offset-1 wp5 delay-05s">
         <!-- 16:9 aspect ratio -->
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe width="420" height="315" src="<%= t(:movie_href) %>" frameborder="0" allowfullscreen></iframe>
+          <iframe width="420" height="315" src="http://www.youtube.com/embed/<%= youtube_id %>" frameborder="0" allowfullscreen></iframe>
         </div>
         <br>
         <br>
