--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -335,11 +335,11 @@
         <div align="center">
           <div class="col-lg-12 wp11">
             <ul class="social-buttons">
-              <li dir="ltr" style="width: 15%;"><a href="https://twitter.com/EndsOct72015"><i class="fa fa-twitter fa-fw"></i> <span>@EndsOct72015</span> <%= english_note %></a></li>
-              <li dir="ltr" style="width: 25%;"><a href="https://www.facebook.com/groups/willworldendOctober7th2015/"><i class="fa fa-facebook fa-fw"></i> <span>willworldendOctober7th2015</span> <%= english_note %></a></li>
-              <li dir="ltr" style="width: 18%;"><a href="https://www.youtube.com/channel/UC8uFk1Rroy8v8yWbyQPAV4w/feed"><i class="fa fa-youtube fa-fw"></i> <span>Friday Night Study</span> <%= english_note %></a></li>
-              <li dir="ltr" style="width: 18%;"><a href="https://www.youtube.com/EBibleFellowship1"><i class="fa fa-youtube fa-fw"></i> <span>E Bible Fellowship</span> <%= english_note %></a></li>
-              <li dir="ltr" style="width: 18%;"><a href="https://www.youtube.com/channel/UCTj0qmscuMgMhj3L3zLkY6g"><i class="fa fa-youtube fa-fw"></i> <span>Bible Ministries International</span> <%= english_note %></a></li>
+              <li dir="ltr"><a href="https://twitter.com/EndsOct72015"><i class="fa fa-twitter fa-fw"></i> <span>@EndsOct72015</span> <%= english_note %></a></li>
+              <li dir="ltr"><a href="https://www.facebook.com/groups/willworldendOctober7th2015/"><i class="fa fa-facebook fa-fw"></i> <span>willworldendOctober7th2015</span> <%= english_note %></a></li>
+              <li dir="ltr"><a href="https://www.youtube.com/channel/UC8uFk1Rroy8v8yWbyQPAV4w/feed"><i class="fa fa-youtube fa-fw"></i> <span>Friday Night Study</span> <%= english_note %></a></li>
+              <li dir="ltr"><a href="https://www.youtube.com/EBibleFellowship1"><i class="fa fa-youtube fa-fw"></i> <span>E Bible Fellowship</span> <%= english_note %></a></li>
+              <li dir="ltr"><a href="https://www.youtube.com/channel/UCTj0qmscuMgMhj3L3zLkY6g"><i class="fa fa-youtube fa-fw"></i> <span>Bible Ministries International</span> <%= english_note %></a></li>
             </ul>
             <img src="/img/logo.png" width="35%" height="35%" alt="">
           </div>
