--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2882,3 +2882,15 @@ position:absolute;
   width: auto;
 }
 
+.container-fluid {
+  max-width: 1170px;
+}
+
+.navbar-custom .nav li a {
+  margin: 0 5px;
+}
+
+.navbar-nav > li > a {
+  padding-top: 20px;
+  padding-bottom: 0;
+}
