Add support for Facebook Open Graph to make sharing work better.

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -38,6 +38,13 @@
   </script>
   <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6028906726051&amp;cd[value]=0.00&amp;cd[currency]=USD&amp;noscript=1" /></noscript>
 
+  <meta property="og:title" content="<%= t(:page_title) %>">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="<%= base_url %>/<%= I18n.locale %>/">
+  <meta property="og:image" content="<%= base_url %>/img/logo-facebook.jpg">
+  <meta property="og:site_name" content="Oct 7th">
+  <meta property="og:description" content="<%= t(:page_description) %>">
+
   <!-- Bootstrap Core CSS -->
   <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
 
