Update index.html.erb to revert Facebook conversion to en_US only.

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -27,7 +27,7 @@
   if (!_fbq.loaded) {
   var fbds = document.createElement('script');
   fbds.async = true;
-  fbds.src = '//connect.facebook.net/<%= I18n.locale %>/fbds.js';
+  fbds.src = '//connect.facebook.net/en_US/fbds.js';
   var s = document.getElementsByTagName('script')[0];
   s.parentNode.insertBefore(fbds, s);
   _fbq.loaded = true;
