--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -7,6 +7,11 @@
   <title><%= t(:page_title) %></title>
   <meta name="description" content="<%= t(:page_description) %>">
   <meta name="author" content="">
+  <script>
+    if (window.top.location != window.location) {
+        window.top.location.href = 'http://oct7lastday.com/<%= I18n.locale %>/';
+    }
+  </script>
   <!-- GOOGLE ANALYTICS  -->
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -14,7 +19,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-10114076-18', 'auto');
+  ga('create', 'UA-68119263', 'auto');
   ga('send', 'pageview');
 
   </script>
@@ -81,8 +86,8 @@
 
           <script type="text/javascript">
             var a2a_config = a2a_config || {};
-            a2a_config.linkname = "Oct7th.com";
-            a2a_config.linkurl = "http://oct7th.com";
+            a2a_config.linkname = "Oct7LastDay.com";
+            a2a_config.linkurl = "http://oct7lastday.com";
             a2a_config.onclick = 1;
             a2a_config.color_main = "D7E5ED";
             a2a_config.color_border = "AECADB";
@@ -104,7 +109,7 @@
             <a class="a2a_button_facebook" style="vertical-align:top;zoom:1;*display:inline"></a>
             <a class="a2a_button_twitter" style="vertical-align:top;zoom:1;*display:inline"></a>
             <a class="a2a_button_google_plus" style="vertical-align:top;zoom:1;*display:inline"></a>
-            <a class="a2a_dd" href="https://www.addtoany.com/share_save?linkurl=http%3A%2F%2Foct7th.com&amp;linkname=Oct7th.com" style="vertical-align:top;zoom:1;*display:inline"></a>
+            <a class="a2a_dd" href="https://www.addtoany.com/share_save?linkurl=http%3A%2F%2Foct7lastday.com&amp;linkname=Oct7LastDay.com" style="vertical-align:top;zoom:1;*display:inline"></a>
           </div>
           <!-- AddToAny END -->
 
@@ -172,7 +177,8 @@
 
               <div class="intro-info-wrapper">
                 <div class="logo-item"><img src="/img/logo.png" width="80%" alt=""></div>
-                <div style="margin-top:-100px"></div>
+                <div style="margin-top:-80px"></div>
+                <h2 class="text-center" style="font-weight: bold; font-size: 300%;"><i class="fa fa-angle-double-right"></i>&nbsp;Oct7LastDay.com&nbsp;<i class="fa fa-angle-double-left"></i></h2>
                 <div id="owl-intro" class="owl-carousel owl-theme">
                   <!--<div class="item">
                       <div class="clock-wrapper">
@@ -180,7 +186,9 @@
                       </div>  
                     </div>-->
                   <div class="item">
-                    <h2 class="text-center"><%= t(:intro_subtitle) %></h2>
+                    <h2 class="text-center">
+                      <%= t(:intro_subtitle) %>
+                    </h2>
                   </div>
                 </div>
               </div>
@@ -291,16 +299,6 @@
         </div>
         <!-- /.col-md-4 -->
 
-        <div class="col-md-3 advantages-item wp7 delay-05s">
-          <a href="<%= t(:links_fns_href) %>" target="_blank">
-            <div class="advantages-item-icon"><i class="fa fa-external-link"></i></div>
-            <h3 dir="ltr" title="<%= t(:links_fns_title) %>">Friday Night Study <%= english_note %></h3>
-          </a>
-          <p>
-            <%= t(:links_fns_desc) %>
-          </p>
-        </div>
-        <!-- /.col-md-4 -->
       </div>
       <!-- /.advantages -->
 
@@ -361,8 +359,8 @@
 
       <div class="row">
         <div class="copyright" dir="ltr">
-          © Oct7th.com 2015<br>
-          <%= t(:contact_email_desc) %>: <a href="mailto:info@oct7th.com">info@oct7th.com</a>
+          © Oct7LastDay.com 2015<br>
+          <%= t(:contact_email_desc) %>: <a href="mailto:info@oct7lastday.com">info@oct7lastday.com</a>
         </div>
         <div class="footer-line"></div>
       </div>
