--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -327,7 +327,7 @@
 <% if I18n.locale.to_s == 'zh' %>
           <iframe src="https://player.vimeo.com/video/141090381?byline=0" width="420" height="236" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <% else %>
-          <iframe width="420" height="315" src="http://www.youtube.com/embed/<%= youtube_id %>" frameborder="0" allowfullscreen></iframe>
+          <iframe width="420" height="315" src="http://www.youtube.com/embed/<%= youtube_id %>?rel=0<%= youtube_cc_html %>" frameborder="0" allowfullscreen></iframe>
 <% end %>
         </div>
         <br>
@@ -393,10 +393,14 @@
   <script src="/js/lib/jquery.animateNumber.js"></script>
   <script src="/js/lib/waypoints.min.js"></script>
 
+  <!-- Pass youtube player settings from this template into JavaScript -->
+  <script>
+    var youtubeId = '<%= youtube_id %>';
+    var youtubeVarsHl = '<%= I18n.locale %>';
+    var youtubeVarsCc = <%= youtube_cc? ? '1' : '0' %>
+  </script>
   <!-- Custom Theme JavaScript -->
-  <script>var youtubeId = '<%= youtube_id %>';</script>
   <script src="/js/main.js"></script>
-
 
 </body>
 
